Fixed the Kendo scrollbar bug and a styling issue on the mobile view.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -77,9 +77,15 @@ span.k-tooltip {
 }
 .km-content{
     height: 100%;
+    //padding-bottom: 18px;  //BUG FIX: This fixes Kendo scrollbar bug! (disabled for second bugfix)
 }
 .km-scroll-container{
     height: 100%;
+}
+
+//BUG FIX: This fixes Kendo scrollbar bug!
+.km-horizontal-scrollbar{
+    width: auto;
 }
 
 /*endregion*/
