--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -596,7 +596,7 @@ zoom: 1;*/
     }
 
     #content {
-        margin-right: 0;
+        padding-right: 0;
     }
 
     #coverWindowButton{
